--- a/AndroidStudio/TaplyticsExample/app/build.gradle
+++ b/AndroidStudio/TaplyticsExample/app/build.gradle
@@ -24,7 +24,7 @@ android {
     }
 }
 repositories {
-    maven { url 'UPDATE ME' }
+    maven { url 'http://vicvu.com/testing' }
 }
 
 
@@ -32,7 +32,7 @@ repositories {
 dependencies {
     compile 'com.android.support:appcompat-v7:20.0.0'
     //Taplytics
-    compile('com.taplytics.sdk:taplytics:1.0.0@aar') {
+    compile('com.taplytics.sdk:taplytics:+@aar') {
         transitive = true
     }
 }
