--- a/AndroidStudio/TaplyticsExample/app/build.gradle
+++ b/AndroidStudio/TaplyticsExample/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.taplytics.taplyticsexample"
-        minSdkVersion 19
+        minSdkVersion 9
         targetSdkVersion 20
         versionCode 1
         versionName "1.0"
@@ -24,7 +24,9 @@ android {
     }
 }
 repositories {
-    maven { url 'http://vicvu.com/testing' }
+    maven {
+        url 'https://github.com/taplytics/Taplytics-Android-SDK/raw/master/AndroidStudio/'
+    }
 }
 
 
