--- a/Eclipse/Taplytics-Example/AndroidManifest.xml
+++ b/Eclipse/Taplytics-Example/AndroidManifest.xml
@@ -52,6 +52,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity
+            android:name=".VisualActivity"
+            android:label=""
+            android:theme="@style/MyTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 
 </manifest>
