--- a/AndroidStudio/TaplyticsExample/app/build.gradle
+++ b/AndroidStudio/TaplyticsExample/app/build.gradle
@@ -32,9 +32,17 @@ repositories {
 dependencies {
     compile 'com.android.support:appcompat-v7:20.0.0'
     //Taplytics
-    compile('com.taplytics.sdk:taplytics:+@aar') {
-        transitive = true
-    }
+    compile('com.taplytics.sdk:taplytics:+@aar')
+      
+//Taplytics Dependencies
+    compile("com.mcxiaoke.volley:library:+")
+    compile("com.squareup.okhttp:okhttp-urlconnection:+")
+    compile("com.squareup.okhttp:okhttp:+")
+
+//Note: socket connections are only always on in debug builds.
+    compile("com.github.nkzawa:socket.io-client:+") 
+    compile("com.github.nkzawa:engine.io-client:+")
+
 }
 
 /**
