--- a/AndroidStudio/TaplyticsExample/app/build.gradle
+++ b/AndroidStudio/TaplyticsExample/app/build.gradle
@@ -37,12 +37,14 @@ dependencies {
 
 //Taplytics Dependencies
     compile("com.mcxiaoke.volley:library:+")
-    compile("com.squareup.okhttp:okhttp-urlconnection:+")
-    compile("com.squareup.okhttp:okhttp:+")
 
 //Note: socket connections are only always on in debug builds.
-    compile("com.github.nkzawa:socket.io-client:+")
-    compile("com.github.nkzawa:engine.io-client:+")
+    compile("com.github.nkzawa:socket.io-client:+") {
+        exclude group: 'org.json'
+    }
+    compile("com.github.nkzawa:engine.io-client:+") {
+        exclude group: 'org.json'
+    }
 
 }
 
