--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".CodeExperimentsActivity"
+            android:name=".DynamicVariablesActivity"
             android:label=""
             android:theme="@style/MyTheme">
             <meta-data
@@ -48,6 +48,15 @@
         </activity>
         <activity
             android:name=".VisualActivity"
+            android:label=""
+            android:theme="@style/MyTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".CodeBlockActivity"
             android:label=""
             android:theme="@style/MyTheme">
             <meta-data
